--- a/style.css
+++ b/style.css
@@ -3,7 +3,8 @@
 body {
   margin: 0;
   padding: 0;
-  background: #0d3989;
+  /* background: #0d3989; */
+  background-image: url("image/bg.webp");
   font-family: Montserrat, sans-serif;
   color: white;
   display: flex;
