--- a/style.css
+++ b/style.css
@@ -31,6 +31,7 @@ body {
   border-radius: 10px;
   padding: 5px 10px;
   gap: 10px;
+  margin-bottom: 50px;
 }
 
 .icon-container {
@@ -54,4 +55,52 @@ body {
 .search::placeholder {
   font-family: inherit;
   color: rgba(250, 250, 255, 0.3);
+}
+
+#info {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.weather-info {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 20px;
+  background: rgba(255, 255, 255, 0.1);
+  padding: 30px;
+  border-radius: 10px;
+}
+
+#weather-description {
+  font-size: 2rem;
+  padding: 0 30px;
+  font-weight: bold;
+}
+
+.weather-numbers {
+  display: flex;
+  flex-direction: column;
+}
+
+.number-container {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+
+.weather-icon-container {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  font-size: 1.5rem;
+}
+
+#notfound {
+  display: none;
+  font-size: 1.4rem;
+  background: rgba(255, 255, 255, 0.1);
+  border-radius: 10px;
+  padding: 10px 100px;
 }
